@@ -55,6 +55,7 @@ EXTRA_DIST = \
 	NOTICE \
 	OPENFLOW-1.1+ \
 	PORTING \
+	README-OFTest \
 	README-gcov \
 	README-lisp \
 	REPORTING-BUGS \
